@@ -32,6 +32,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #16809: Fixed some tkinter incompabilities with Tcl/Tk 8.6.
+
 - Issue #16809: Tkinter's splitlist() and split() methods now accept Tcl_Obj
   argument.
 
